navbar dark mode fix

--- a/components/NavBar/navbar.module.css
+++ b/components/NavBar/navbar.module.css
@@ -8,8 +8,8 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    background-color: white;
-    color: black;
+    /* background-color: white; */
+    /* color: black; */
     padding-top: 10px;
     padding-bottom: 10px;
     border-bottom: 1px solid;
